Fix align for mobile

--- a/style.css
+++ b/style.css
@@ -124,14 +124,13 @@ a {
  * Styling for the news list
  */
 .news_item {
-    padding-bottom:25px;
-    padding-left:25px;
+    padding-bottom: 25px;
+    padding-left: 25px;
+    text-align: left;
 }
-.news_item .ul {list-style-type:square;}
+.news_item .ul {list-style-type: square;}
+.news-date {font-weight: bold;}
 
-.news-date {
-    font-weight:bold
-}
 .news-text {
     color: #1a1a1a;
     padding-left:5px;
